broke up the models and made the create function

--- a/client/partials/index.html
+++ b/client/partials/index.html
@@ -1,7 +1,7 @@
 <div ng-controller = "indexController">
-<h3> Eneter a username to continue </h3>
+<h3> Enter a username to continue </h3>
 <form>
-	<input type= "text" ng-model= "user.username">
-	<button type='submit' ng-click= 'test()'> Submit </button>
+	<input type= "text" ng-model= "newUser.username">
+	<button ng-click= 'index()'> Submit </button>
 </form>		
 </div>
